[package]
name = "cli_async"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.14.2"
async-ctrlc = "1.0.0"
futures = "0.3.1"
indicatif = "0.13.0"
once_cell = "1.2.0"
structopt = { version = "0.3.8", features = ["color", "suggestions"] }
tokio = { version = "0.2.11", features = ["rt-core", "macros", "stream", "sync", "time"] }
