[package]
name = "cli_async"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.23.2"
async-ctrlc = "1.2.0"
futures = "0.3.21"
indicatif = "0.16.2"
once_cell = "1.12.0"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.9"
